finalize bybit package and  handlers
